<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MateriActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/usability" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/usability_1"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginTop="30dp"
                android:text="@string/usability_2"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:justificationMode="inter_word"
                android:text="@string/usability_3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView4"
                android:justificationMode="inter_word"
                android:text="@string/usability_4" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="25dp"
                android:layout_below="@id/textView5"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/measuringusability" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView5"
                android:layout_marginTop="10dp"

                android:textStyle="bold"
                android:text="Effectiveness" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView6"
                android:layout_toLeftOf="@id/imageView2"
                android:justificationMode="inter_word"
                android:text="@string/usability_5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView7"
                android:layout_marginTop="10dp"

                android:textStyle="bold"
                android:text="Efficiency" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView8"
                android:layout_toLeftOf="@id/imageView2"
                android:justificationMode="inter_word"
                android:text="@string/usability_6" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView9"
                android:layout_marginTop="10dp"

                android:textStyle="bold"
                android:text="Satisfaction" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView10"
                android:justificationMode="inter_word"
                android:layout_toLeftOf="@id/imageView2"
                android:text="@string/usability_7" />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>